# Zad2

./: .gitignore  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
include/: Makefile  Makefile.am  Makefile.in  area.c  libarea.h  volume.c
include/.deps/: area.Po  volume.Plo
include/.libs/: libvolume.so.0.0.0
src/: CubenSquare.c  Makefile  Makefile.am  Makefile.in  libvolume.h
src/.deps/: CubenSquare.Po  volume.Po
