#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([CubenSquare], [3.0])

AM_INIT_AUTOMAKE

AC_PROG_RANLIB
# Checks for programs.
AC_PROG_CC

# Checks for libraries.
LT_INIT
# Checks for header files.


# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile include/Makefile src/Makefile])

AC_OUTPUT
